force-app/main/default/objects/bank_account__c/bank_account__c.object-meta.xml
<CustomObject>
    <label>bank-account</label>
    <nameField>
        <label>bank-account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>bank-account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>