force-app/main/default/objects/bank_account__c/fields/abcd__c.field-meta.xml
<CustomField>
    <fullName>abcd__c</fullName>
    <label>abcd</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>h</fullName>
            </value>
            <value>
                <fullName>i</fullName>
            </value>
            <value>
                <fullName>j</fullName>
            </value>
            <value>
                <fullName>k</fullName>
            </value>
            <value>
                <fullName>l</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>n</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>p</fullName>
            </value>
            <value>
                <fullName>q</fullName>
            </value>
            <value>
                <fullName>r</fullName>
            </value>
            <value>
                <fullName>s</fullName>
            </value>
            <value>
                <fullName>t</fullName>
            </value>
            <value>
                <fullName>u</fullName>
            </value>
            <value>
                <fullName>v</fullName>
            </value>
            <value>
                <fullName>w</fullName>
            </value>
            <value>
                <fullName>x</fullName>
            </value>
            <value>
                <fullName>y</fullName>
            </value>
            <value>
                <fullName>z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>