force-app/main/default/objects/bank_account__c/fields/by_employee__c.field-meta.xml
<CustomField>
    <fullName>by_employee__c</fullName>
    <label>by_employee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>