force-app/main/default/objects/bank_account__c/fields/by_student__c.field-meta.xml
<CustomField>
    <fullName>by_student__c</fullName>
    <label>by_student</label>
    <length>100</length>
    <type>Text</type>
</CustomField>