force-app/main/default/objects/bank_account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>bank-account</relationshipLabel>
    <relationshipName>bank_account</relationshipName>
    <type>Lookup</type>
</CustomField>