force-app/main/default/objects/bank_account__c/recordTypes/for_employee.recordType-meta.xml
<RecordType>
    <fullName>for_employee</fullName>
    <active>true</active>
    <label>for_employee</label>
</RecordType>