force-app/main/default/objects/bank_account__c/recordTypes/for_student.recordType-meta.xml
<RecordType>
    <fullName>for_student</fullName>
    <active>true</active>
    <label>for_student</label>
</RecordType>